--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.12.0",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.4"
   }
