--- a/backend/package.json
+++ b/backend/package.json
@@ -8,5 +8,9 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.7.3",
     "nodemon": "^3.1.4"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
