--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "postcss-calc": "^8.0.0",
     "react-spotify-web-playback": "^0.14.6",
     "react-spotify-web-playback-sdk": "^3.0.2",
     "web-vitals": "^2.1.4"
